# Gaven

./: CMakeLists.txt  Dependencies.cmake  README.md
demo/: CMakeLists.txt
demo/src/: main.c
demoserver/: CMakeLists.txt
demoserver/src/: main.c
gaven/: CMakeLists.txt
gaven/include/: gaven.h
gaven/src/: application.c  entry.c  event.h  test.c
gaven/src/core/: application.c  application.h  entry.c  event.h
gaven/src/core/debug/: log.c  log.h
gaven/src/core/layer/: layer.c  layer.h  layer_registry.h
gaven/src/debug/: log.c  log.h
gaven/src/layer/: layer.c  layer.h
gaven/src/networking/: http.c  http.h
